--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "flowbite": "^1.6.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
