--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@rainbow-me/rainbowkit": "^0.5.1",
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
+    "graphql-request": "^5.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
