--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-string-replace": "^1.1.0",
     "sass": "^1.54.9",
     "ui": "*",
     "wagmi": "^0.6.5"
