--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "next": "12.2.5",
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "react-string-replace": "^1.1.0",
