--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@rainbow-me/rainbowkit": "^0.5.1",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-timeago": "^4.1.3",
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
