--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.13",
     "flowbite": "^1.6.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
