--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@types/react-timeago": "^4.1.3",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
+    "@tiptap/html": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
