--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@types/react-blockies": "^1.4.1",
     "@types/react-timeago": "^4.1.3",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.220",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
     "@tiptap/html": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
