--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,6 @@
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@rainbow-me/rainbowkit": "^0.5.1",
-    "@types/react-blockies": "^1.4.1",
-    "@types/react-timeago": "^4.1.3",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
@@ -22,6 +20,9 @@
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@tiptap/suggestion": "^2.0.0-beta.220",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-timeago": "^4.1.3",
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
