--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
     "@ceramicnetwork/http-client": "^2.17.0",
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
+    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.4",
     "@rainbow-me/rainbowkit": "^0.5.1",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
