fix: updated next13

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,7 @@
     "@ceramicnetwork/http-client": "^2.17.0",
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
-    "@rainbow-me/rainbowkit": "^0.5.1",
-    "@types/react-blockies": "^1.4.1",
-    "@types/react-timeago": "^4.1.3",
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
@@ -22,10 +20,18 @@
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-timeago": "^4.1.3",
+    "@wagmi/core": "0.9.0",
+    "@web3auth/modal": "^4.2.3",
+    "@web3auth/torus-wallet-connector-plugin": "^4.6.0",
+    "@web3auth/web3auth-wagmi-connector": "2.2.0",
+    "@web3modal/ethereum": "2.0.0",
+    "@web3modal/react": "2.0.0",
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
-    "next": "12.2.5",
+    "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
