--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@ceramicnetwork/http-client": "^2.17.0",
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
+    "@lens-protocol/client": "^0.1.0",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@rainbow-me/rainbowkit": "^0.5.1",
@@ -28,7 +29,7 @@
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
-    "next": "12.2.5",
+    "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
@@ -46,7 +47,6 @@
     "@types/react": "18.0.17",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
-    "next-transpile-modules": "9.0.0",
     "tsconfig": "*"
   }
 }
