--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@types/react-blockies": "^1.4.1",
     "@types/react-timeago": "^4.1.3",
-    "@wagmi/core": "0.9.0",
+    "@wagmi/core": "^0.9.7",
     "@web3auth/modal": "^4.2.3",
     "@web3auth/torus-wallet-connector-plugin": "^4.6.0",
     "@web3auth/web3auth-wagmi-connector": "2.2.0",
