--- a/apps/ceramic/package.json
+++ b/apps/ceramic/package.json
@@ -5,15 +5,15 @@
   "types": "generated/*",
   "license": "MIT",
   "scripts": {
-    "node:local": "CERAMIC_ENABLE_EXPERIMENTAL_SYNC='true' CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB='true' npx @ceramicnetwork/cli daemon",
+    "node:local": "CERAMIC_ENABLE_EXPERIMENTAL_SYNC='true' CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB='true' npx @ceramicnetwork/cli daemon --network inmemory",
     "node:testnet": "CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB=true npx @ceramicnetwork/cli daemon --network=testnet-clay",
-    "definitions": "composedb composite:compile denoted-composite.json ../web/src/composedb/definition.ts",
+    "definitions": "composedb composite:compile ./generated/denoted-composite.json ../web/src/composedb/definition.ts",
     "definitions:local": "composedb composite:compile ./generated/denoted-composite.json ../web/src/composedb/definition.ts -c http://0.0.0.0:7007",
-    "schema": "source .env.local && composedb composite:create generated/denoted.graphql --did-private-key=$DID_PRIVATE_KEY --output=denoted-composite.json -c http://0.0.0.0:7007",
+    "schema": "source .env.local && composedb composite:create src/denoted.graphql --did-private-key=$DID_PRIVATE_KEY --output=./generated/denoted-composite.json -c http://0.0.0.0:7007",
     "schema:view": "composedb graphql:schema runtime-composite.json --output=./generated/schema.graphql",
-    "deploy": "source .env.local && composedb composite:deploy denoted-composite.json --did-private-key=$DID_PRIVATE_KEY",
+    "deploy": "source .env.local && composedb composite:deploy ./generated/denoted-composite.json --did-private-key=$DID_PRIVATE_KEY",
     "deploy:local": "source .env.local && composedb composite:deploy ./generated/denoted-composite.json --did-private-key=$DID_PRIVATE_KEY -c http://0.0.0.0:7007",
-    "compile": "source .env.local && composedb composite:compile denoted-composite.json ./generated/runtime-composite.json --did-private-key=$DID_PRIVATE_KEY",
+    "compile": "source .env.local && composedb composite:compile ./generated/denoted-composite.json ./generated/runtime-composite.json --did-private-key=$DID_PRIVATE_KEY",
     "compile:local": "source .env.local && composedb composite:compile ./generated/denoted-composite.json runtime-composite.json --did-private-key=$DID_PRIVATE_KEY -c http://0.0.0.0:7007",
     "graphql": "source .env.local && composedb graphql:server --graphiql --port=5001 runtime-composite.json --did-private-key=$DID_PRIVATE_KEY -c http://0.0.0.0:7007",
     "update": "source .env.local && yarn schema && yarn deploy && yarn compile && yarn definitions",
