--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,18 +23,19 @@
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@tiptap/suggestion": "^2.0.0-beta.220",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-timeago": "^4.1.3",
     "@wagmi/core": "^0.9.7",
     "@web3auth/modal": "^4.2.3",
     "@web3auth/torus-wallet-connector-plugin": "^4.6.0",
     "@web3auth/web3auth-wagmi-connector": "2.2.0",
     "@web3modal/ethereum": "2.0.0",
     "@web3modal/react": "2.0.0",
-    "@tiptap/suggestion": "^2.0.0-beta.220",
-    "@types/react-blockies": "^1.4.1",
-    "@types/react-timeago": "^4.1.3",
     "axios": "^0.27.2",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
+    "lodash.get": "^4.4.2",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/lodash.get": "^4.4.7",
     "@types/node": "^17.0.12",
     "@types/react": "18.0.17",
     "eslint": "7.32.0",
