--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@web3modal/ethereum": "2.0.0",
     "@web3modal/react": "2.0.0",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "did-session": "^2.0.0",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
@@ -40,11 +41,13 @@
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
     "sass": "^1.54.9",
+    "tailwind-merge": "^1.10.0",
     "ui": "*",
     "wagmi": "^0.6.5"
   },
