--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "did-session": "^2.0.0",
+    "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
     "next": "^13.2.3",
