--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@tiptap/suggestion": "^2.0.0-beta.220",
     "@types/react-blockies": "^1.4.1",
     "@types/react-timeago": "^4.1.3",
+    "@vercel/analytics": "^0.1.11",
     "@wagmi/core": "^0.9.7",
     "@web3auth/modal": "^4.2.3",
     "@web3auth/torus-wallet-connector-plugin": "^4.6.0",
