--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@lens-protocol/client": "^0.1.0",
+    "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@rainbow-me/rainbowkit": "^0.5.1",
