chore: add ui components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@lens-protocol/client": "^0.1.0",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.4",
@@ -36,6 +38,7 @@
     "@web3modal/react": "2.0.0",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "did-session": "^2.0.0",
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
