--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,7 +45,7 @@
     "lodash.get": "^4.4.2",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-blockies": "^1.4.1",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
@@ -61,7 +61,7 @@
     "@babel/core": "^7.0.0",
     "@types/lodash.get": "^4.4.7",
     "@types/node": "^17.0.12",
-    "@types/react": "18.0.17",
+    "@types/react": "^18.0.28",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "tsconfig": "*"
