--- a/apps/ceramic/.env.local.example
+++ b/apps/ceramic/.env.local.example
@@ -1,5 +1,3 @@
 DID_PRIVATE_KEY=
-CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB=true
 DID_KEY=
-POSTGRES_PASSWORD=
-CERAMIC_API_URL=
+CERAMIC_API_URL=http://0.0.0.0:7007
