--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
+    "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
     "react": "^18.2.0",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@types/lodash.get": "^4.4.7",
+    "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.28",
     "eslint": "7.32.0",
