--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@composedb/client": "^0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@lens-protocol/client": "^0.1.0",
+    "@lens-protocol/widgets-react": "^0.0.10",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-form": "^0.0.2",
