--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@didtools/pkh-ethereum": "^0.1.0",
     "@lens-protocol/client": "^0.1.0",
     "@lens-protocol/widgets-react": "^0.0.10",
+    "@lit-protocol/lit-node-client": "^2.1.107",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-form": "^0.0.2",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@lit-protocol/types": "^2.1.104",
     "@types/lodash.get": "^4.4.7",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "^17.0.12",
