--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,6 @@
     "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.4",
-    "@rainbow-me/rainbowkit": "^0.5.1",
     "@sentry/nextjs": "^7.47.0",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
@@ -30,7 +29,6 @@
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/suggestion": "^2.0.0-beta.220",
-    "@types/react-blockies": "^1.4.1",
     "@types/react-timeago": "^4.1.3",
     "@vercel/analytics": "^0.1.11",
     "@wagmi/core": "^0.9.7",
@@ -42,7 +40,9 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "connectkit": "^1.2.2",
     "did-session": "^2.0.0",
+    "ethers": "^5",
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
@@ -50,7 +50,6 @@
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
     "react": "^18.2.0",
-    "react-blockies": "^1.4.1",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
@@ -59,7 +58,7 @@
     "sass": "^1.54.9",
     "tailwind-merge": "^1.10.0",
     "ui": "*",
-    "wagmi": "^0.6.5"
+    "wagmi": "^0.12.10"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
