--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-query": "^3.39.2",
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
