--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-form": "^0.0.2",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@sentry/nextjs": "^7.47.0",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
