feat: design done

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,8 +55,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.2",
+    "react-share": "^4.4.1",
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
+    "react-twitter-embed": "^4.0.4",
     "sass": "^1.54.9",
     "tailwind-merge": "^1.10.0",
     "ui": "*",
