--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "ethers": "^5",
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
+    "langchain": "^0.0.56",
     "lodash.get": "^4.4.2",
     "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
