--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,6 +53,7 @@
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-share": "^4.4.1",
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
     "sass": "^1.54.9",
