--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
     "@didtools/pkh-ethereum": "^0.1.0",
     "@lens-protocol/client": "^0.1.0",
     "@lens-protocol/widgets-react": "^0.0.10",
-    "@lit-protocol/lit-node-client": "^2.1.107",
+    "@lit-protocol/lit-node-client": "^2.1.123",
     "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@sentry/nextjs": "^7.47.0",
+    "@supabase/supabase-js": "^2.20.0",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-image": "^2.0.2",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
@@ -67,7 +68,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@lit-protocol/types": "^2.1.104",
+    "@lit-protocol/types": "^2.1.123",
     "@types/formidable": "^2.0.5",
     "@types/lodash.get": "^4.4.7",
     "@types/mixpanel-browser": "^2.38.1",
