--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
+    "lucide-react": "^0.171.0",
     "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
