--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.0.4",
     "@sentry/nextjs": "^7.47.0",
     "@supabase/supabase-js": "^2.20.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-image": "^2.0.2",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
@@ -41,6 +42,7 @@
     "@web3modal/ethereum": "2.0.0",
     "@web3modal/react": "2.0.0",
     "axios": "^0.27.2",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "connectkit": "^1.2.2",
@@ -54,6 +56,7 @@
     "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
@@ -63,7 +66,9 @@
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
     "sass": "^1.54.9",
-    "tailwind-merge": "^1.10.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "ui": "*",
     "wagmi": "^0.12.10"
   },
