--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,10 +16,12 @@
     "@lens-protocol/widgets-react": "^0.0.10",
     "@lit-protocol/lit-node-client": "^2.1.123",
     "@pinata/sdk": "^2.1.0",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-form": "^0.0.2",
-    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@sentry/nextjs": "^7.47.0",
     "@supabase/supabase-js": "^2.20.0",
@@ -60,7 +62,6 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
     "react-query": "^3.39.2",
     "react-share": "^4.4.1",
     "react-string-replace": "^1.1.0",
