--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-image": "^2.0.2",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
+    "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
     "@tiptap/html": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
