--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/suggestion": "^2.0.0-beta.220",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "@types/react-timeago": "^4.1.3",
     "@vercel/analytics": "^0.1.11",
     "@wagmi/core": "^0.9.7",
@@ -61,6 +62,7 @@
     "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
     "next-mdx-remote": "^4.3.0",
+    "node-telegram-bot-api": "^0.61.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
