--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "@supabase/supabase-js": "^2.20.0",
     "@tailwindcss/typography": "^0.5.9",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
+    "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
     "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-typography": "^2.0.0-beta.220",
