--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@sentry/nextjs": "^7.47.0",
     "@supabase/supabase-js": "^2.20.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@tiptap/extension-code-block-lowlight": "^2.0.3",
     "@tiptap/extension-highlight": "^2.0.0-beta.220",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.0-beta.220",
@@ -59,6 +60,7 @@
     "framer-motion": "^10.0.1",
     "graphql-request": "^5.1.0",
     "lodash.get": "^4.4.2",
+    "lowlight": "^2.9.0",
     "lucide-react": "^0.171.0",
     "mixpanel-browser": "^2.46.0",
     "next": "^13.2.3",
