--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -74,6 +74,7 @@
     "react-share": "^4.4.1",
     "react-string-replace": "^1.1.0",
     "react-timeago": "^7.1.0",
+    "react-twitter-widgets": "^1.11.0",
     "sass": "^1.54.9",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.1",
