--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -73,6 +73,7 @@
     "react-query": "^3.39.2",
     "react-share": "^4.4.1",
     "react-string-replace": "^1.1.0",
+    "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
     "react-twitter-widgets": "^1.11.0",
     "sass": "^1.54.9",
