--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cleanup-page-versions": "npx tsx scripts/cleanupOlderPageVersions.ts"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.17.0",
@@ -91,6 +92,7 @@
     "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.28",
+    "dotenv": "^16.0.3",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "tsconfig": "*"
