--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "cleanup-page-versions": "npx tsx scripts/cleanupOlderPageVersions.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.17.0",
@@ -92,7 +91,6 @@
     "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.28",
-    "dotenv": "^16.0.3",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "tsconfig": "*"
