--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -12,6 +12,7 @@
     "@pinata/sdk": "^2.1.0",
     "@supabase/supabase-js": "^2.20.0",
     "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.1",
     "p-map": "^6.0.0",
     "tsx": "^3.12.7"
   }
